--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
     "@types/node": "20.4.8",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "lodash.debounce": "^4.0.8",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
@@ -23,6 +25,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.7",
     "prettier": "^3.0.1",
     "prettier-plugin-tailwindcss": "^0.4.1"
   }
