--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.23.2",
+    "@prisma/client": "^5.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@types/node": "20.4.8",
     "@types/react": "18.2.18",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.7",
     "prettier": "^3.0.1",
-    "prettier-plugin-tailwindcss": "^0.4.1"
+    "prettier-plugin-tailwindcss": "^0.4.1",
+    "prisma": "^5.1.1"
   }
 }
